--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -12,7 +12,7 @@
 
 <div class="row justify-content-center mb-3">
   <div class="col-md-9 text-center">
-    <h1 id="hometext" class="font-weight-bold">Дмитрий Нагиев - шоумэн, бизнесмэн, брутальный лысый мужчина 😎</h1>
+    <h1 id="hometext" class="font-weight-bold">Дмитрий Нагиев - шоумэн, бизнесмэн, брутальный лысый мужчина</h1>
   </div>
 </div>
 
